@@ -1,0 +1,9 @@
+#!/usr/bin/perl -w
+use strict;
+$^W = 1;
+use Test;
+BEGIN { plan tests => 1 }
+
+use IP::Registry; ok(1);
+exit;
+__END__
