@@ -1,6 +1,11 @@
 <-------------- THE SEVENTY-TWO CHARACTER COLUMN-OMETER --------------->
 <--------1---------2---------3---------4---------5---------6---------7->
 
+IP-Registry-9999.9999, 2002.12.03 - really final release
+--------------------------------
+Added simple test to stop annoying nag messages from CPAN testbots.
+
+
 IP-Registry-9999.999, 2002.12.03 - final release
 --------------------------------
 Removed tests. Module closed.
